# qoolqit

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  setup.py  versions.json
.github/workflows/: docs.yml  docs_build_preview.yml  docs_development.yml  lint.yml  publish.yml  test.yml
benchmarks/embedders/: interaction_embedders.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_AGREEMENT.md  LICENSE.md  index.md  installation.md  utils.py
docs/contents/: available_embedders.md  custom_embedders.md  devices.md  drives.md  execution.md  execution_deprecated.md  graphs.md  programs.md  registers.md  sequences.md  waveforms.md
docs/contribute/: CONTRIBUTING.md
docs/extended_usage/: adimensionalization.md  custom_embedders.ipynb  custom_embedders.md  custom_waveforms.ipynb  custom_waveforms.md  execution_config.md
docs/fundamentals/: available_embedders.md  compilation.md  custom_embedders.md  devices.md  drives.md  embedding.ipynb  embedding.md  execution.md  graphs.ipynb  graphs.md  introduction.md  overview.md  programs.md  quantum_program.ipynb  quantum_program.md  registers.md  waveforms.md
docs/get_started/: adimensionalization.md  install.md  programming_with_qoolqit.ipynb  qoolqit_model.ipynb  qoolqit_model.md  rydberg_model.md
docs/getting_started/: pulser_backends.ipynb  pulser_backends2.ipynb  rydberg_model.md
docs/reference/: api.md  devices.md  drive.md  embedding.md  exceptions.md  execution.md  graphs.md  internals.md  program.md  qoolqit.md  register.md  waveforms.md
docs/theory/: Advanced.md  Introduction.md  Overview.md  rydberg_model.md
docs/tutorials/: Critical_state_TFIM.ipynb  Solving_a_MWIS.ipynb  basic_qubo.ipynb  basic_qubo.md  custom_quantum_program copy.ipynb  custom_quantum_program.ipynb  demo_12_11_2025.ipynb  index.md  placeholder.md  programming_with_qoolqit.ipynb  pulser_backends.ipynb  rydberg_blockade.ipynb  solving_a_qubo.ipynb  solving_a_qubo.py  solving_max_cut.ipynb  unit_conversion.ipynb  unit_conversion.md  user_journey.ipynb
examples/: Adimensional_demo.ipynb  Draft_demo.ipynb
main/: 404.html  index.html  objects.inv
main/CODE_OF_CONDUCT/: index.html
main/CONTRIBUTING/: index.html
main/CONTRIBUTOR_AGREEMENT/: index.html
main/LICENSE/: index.html
main/contribute/: index.html
main/extended_usage/: index.html
main/fundamentals/: index.html
main/get_started/: index.html
main/reference/: index.html
main/search/: search_index.json
main/tutorials/: index.html
pr-preview/pr-296/: index.html
pr-preview/pr-333/: 404.html  index.html
pr-preview/pr-392/: index.html
pr-preview/pr-396/: 404.html  index.html
pr-preview/pr-398/: 404.html  index.html
pr-preview/pr-399/: objects.inv
pr-preview/pr-400/: 404.html  index.html
pr-preview/pr-402/: 404.html  index.html
qoolqit/: __init__.py  drive.py  program.py  pulserbackend.py  pulserbackend2.py  quantum_program  quantum_program.py  register.py  sequence.py  utils.py  waveforms.py
qoolqit-core/: README.md  pyproject.toml
qoolqit-core/qoolqit_core/: __init__.py
qoolqit/_solvers/: __init__.py  backends.py  data.py  types.py
qoolqit/core/: pyproject.toml
qoolqit/devices/: __init__.py  _pulser_devices.py  converter.py  device.py  unit_converter.py  utils.py
qoolqit/embedding/: __init__.py  algorithms.py  base_embedder.py  configs.py  embedded_dataset.py  embedded_graph.py  embedders.py  graph_embedder.py  matrix_embedder.py  unitdisk_embedder.py
qoolqit/execution/: __init__.py  backend.py  backends.py  compilation_functions.py  compiler.py  convert.py  job.py  sequence_compiler.py  unit_converter.py  utils.py
qoolqit/graphs/: __init__.py  base_graph.py  data_graph.py  dataset.py  graph.py  layout.py  utils.py
qoolqit/pulser/: __init__.py  devices.py  pulses.py  register.py  sequence.py  waveforms.py
qoolqit/solvers/: __init__.py  backends.py  types.py
qoolqit/waveforms/: __init__.py  __init__py.py  base_waveforms.py  utils.py  waveforms.py
tests/: conftest.py  helpers.py  metrics.py  pytest.ini  test_base_waveforms.py  test_deprecations.py  test_devices.py  test_drive.py  test_embedding.py  test_execution.py  test_main.py  test_metadata.py  test_mimiq_qpu_support.py  test_program.py  test_pulserbackend.py  test_register.py  test_run_backend.py  test_version.py  test_waveforms.py
tests/test_compilation/: test_compile_to.py  test_max_energy.py  test_working_point.py
tests/test_embedding/: test_base_embedders.py  test_blade.py  test_blade_embedding.py  test_default_embedding.py  test_interaction_embedding.py  test_spring_layout_embedding.py
tests/test_execution/: test_backend.py  test_backends.py  test_backends_integration.py  test_job.py
v0.0.1/: 404.html  index.html  objects.inv
v0.0.2/: 404.html  index.html
v0.0.3/: 404.html  index.html
v0.0.5/: 404.html  index.html
v0.0.6/: 404.html  index.html
v0.0.9/: 404.html  index.html
v0.1.0/: 404.html  index.html
v0.1.1/: 404.html  index.html
v0.1.2/: 404.html  index.html
v0.1.3/: 404.html  index.html
v0.2.0/: 404.html  index.html
v0.2.1/: 404.html  index.html
v0.3.0/: 404.html  index.html
v0.3.1/: 404.html  index.html
v0.3.2/: 404.html  index.html
v0.3.3/: index.html
v0.3.4/: 404.html  index.html
v0.4.0/: 404.html  index.html
v1.0.0/: 404.html  index.html  objects.inv
v1.1.0/: 404.html  index.html
v1.1.1/: index.html
v1.2.0/: 404.html
(+1674 files in other folders)
