[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qoolqit"
description = "A Python library for developing algorithms in the Rydberg Analog Model."
readme = "README.md"
version = "0.3.3"
requires-python = ">=3.10"
license = { text = "MIT-derived" }
keywords = ["quantum"]
authors = [
  { name = "João Moutinho", email = "joao.moutinho@pasqal.com" },
  { name = "Stefano Grava", email = "s.grava-ext@pasqal.com" },
  { name = "Vytautas Abramavicius", email = "vytautas.abramavicius@pasqal.com" },
  { name = "Roland Guichard", email = "roland.guichard@pasqal.com" },
  { name = "David Teller", email = "david.teller@pasqal.com" },
  { name = "Manu Lahariya", email = "manu.lahariya@pasqal.com" },
  { name = "Charles MOUSSA", email = "charles.moussa@pasqal.com" },
  { name = "Vittorio Vitale", email = "vittorio.vitale@pasqal.com" },
  { name = "Clément de Terrasson de Montleau", email = "clement.de-terrasson@pasqal.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "pulser[torch]~=1.6.2",
  "networkx~=3.4",
]

[project.optional-dependencies]
extras = [
  "emu_sv",
  "emu_mps",
  "torch_geometric",
  "seaborn",
  "scikit-learn",
]
dev = [
  "qoolqit[extras]",
  "jupyter",
  "flaky",
  "pytest",
  "pytest-cov",
  "pytest-markdown-docs",
  "ipykernel",
  "pre-commit",
  "nbmake",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python",
  "mkdocs-section-index",
  "mkdocs-jupyter==0.24.7", # Don't let it update to 0.25 as it doesn't render LaTeX in notebooks!
  "mkdocs-exclude",
  "mkapi",
  "markdown-exec",
  "mike",
  "nbconvert",
  "black",
  "flake8",
  "isort",
  "ruff",
]

[project.urls]
Documentation = "https://pasqal-io.github.io/qoolqit/latest"
Issues = "https://github.com/pasqal-io/qoolqit/issues"
Source = "https://github.com/pasqal-io/qoolqit"

[tool.hatch.metadata]
allow-direct-references = true
allow-ambiguous-features = true

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=qoolqit --markdown-docs {args}"
test_tutorials = "pytest --nbmake docs/tutorials"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """-vvv --cov-report=term-missing --cov-config=pyproject.toml --cov=qoolqit --markdown-docs"""
xfail_strict = true
filterwarnings = [
  "ignore:`torch_geometric.distributed` has been deprecated since 2.7.0 and will no longer be maintained.:DeprecationWarning",
  "ignore:`torch.jit.script` is deprecated. Please switch to `torch.compile` or `torch.export`.:DeprecationWarning",
]

[tool.hatch.envs.docs]
features = ["dev"]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311", "312", "313"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.gitignore",
    "/.pre-commit-config.yml",
    "/tests",
    "/docs",
    "/examples",
]

[tool.hatch.build.targets.wheel]
packages = ["qoolqit"]

[tool.coverage.run]
branch = true
parallel = true
# uncomment to omit any file from the
# coverage. Regexps can be used
# to select all files from a folder
#omit = [
#  "template_python/to_omit.py",
#]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
exclude_also = [
  "def __str__",
  "def __repr__",
  "def __repr_content__",
  "def __repr_header__",
  "def draw",
  "@abstractmethod",
  "@overload",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "Q"]
extend-ignore = ["F841"]
isort.required-imports = ["from __future__ import annotations"]
mccabe.max-complexity = 15
flake8-quotes.docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"*.ipynb" = ["E402", "I002"]
"setup.py" = ["I002"]

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = false
ignore_missing_imports = true
